filters, limit & offset added to listing api
