# controller/http/exam/exam.go
@@ -3,7 +3,9 @@ package exam
 import (
 	"context"
 	"examservice/models/dto"
+	"examservice/models/filters"
 	"examservice/utils"
+	"strconv"
 
 	"github.com/bappaapp/goutils/logger"
 	"github.com/gin-gonic/gin"
@@ -15,7 +17,7 @@ type ExamController struct {
 
 type Service interface {
 	CreateOrUpdateExam(ctx context.Context, req *dto.ExamRequest) (*dto.ExamResponse, error)
-	GetExamsList(ctx context.Context, topic string, subTopic string) (*dto.ListExamsResponse, error)
+	GetExamsList(ctx context.Context, filter *filters.ExamFilter, limit, offset int) (*dto.ListExamsResponse, error)
 	GetExamById(ctx context.Context, examId string) (*dto.ExamByIdResponse, error)
 	DeleteExamById(ctx context.Context, examId string) (*dto.DeleteExamResponse, error)
 }
@@ -76,6 +78,8 @@ func (ec *ExamController) CreateOrUpdateExam(ctx *gin.Context) {
 // @Produce json
 // @Param topic query string false "Filter by topic"
 // @Param subTopic query string false "Filter by subTopic"
+// @Param limit query int false "Limit" default(10)
+// @Param offset query int false "Offset" default(0)
 // @Success 200 {array} dto.ListExamsResponse "Successful response"
 // @Failure 400 {object} utils.CustomError "Invalid request"
 // @Failure 500 {object} utils.CustomError "Internal server error"
@@ -85,8 +89,25 @@ func (ec *ExamController) GetExamsList(ctx *gin.Context) {
 	topic := ctx.Query("topic")
 	subTopic := ctx.Query("subTopic")
 
+	limitStr := ctx.DefaultQuery("limit", "10")
+	offsetStr := ctx.DefaultQuery("offset", "0")
+
+	// Parse limit into an integer
+	limit, err := strconv.Atoi(limitStr)
+	if err != nil {
+		utils.WriteError(ctx, err)
+		return
+	}
+
+	// Parse offset into an integer
+	offset, err := strconv.Atoi(offsetStr)
+	if err != nil {
+		utils.WriteError(ctx, err)
+		return
+	}
+
 	// Call the service function with optional filter parameters
-	exams, err := ec.service.GetExamsList(ctx, topic, subTopic)
+	exams, err := ec.service.GetExamsList(ctx, &filters.ExamFilter{Topic: topic, SubTopic: subTopic}, limit, offset)
 	if err != nil {
 		utils.WriteError(ctx, err)
 		return
