# docs/swagger.json
@@ -121,6 +121,20 @@
                         "description": "Filter by subTopic",
                         "name": "subTopic",
                         "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 10,
+                        "description": "Limit",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 0,
+                        "description": "Offset",
+                        "name": "offset",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -333,6 +347,40 @@
                     "Questions"
                 ],
                 "summary": "Get all questions",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Filter by topic",
+                        "name": "topic",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filter by subTopic",
+                        "name": "subTopic",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filter by userId",
+                        "name": "userId",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 10,
+                        "description": "Limit",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 0,
+                        "description": "Offset",
+                        "name": "offset",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Successful response",
@@ -660,7 +708,13 @@
                 "explanation": {
                     "type": "string"
                 },
+                "subTopic": {
+                    "type": "string"
+                },
                 "text": {
+                    "type": "string"
+                },
+                "topic": {
                     "type": "string"
                 },
                 "updated_at": {
@@ -714,7 +768,13 @@
                 "explanation": {
                     "type": "string"
                 },
+                "subTopic": {
+                    "type": "string"
+                },
                 "text": {
+                    "type": "string"
+                },
+                "topic": {
                     "type": "string"
                 },
                 "userId": {
