# models/filters/exam.go
@@ -1,0 +1,6 @@
+package filters
+
+type ExamFilter struct {
+	Topic    string
+	SubTopic string
+}
