# models/filters/question.go
@@ -1,0 +1,7 @@
+package filters
+
+type QuestionFilter struct {
+	Topic    string
+	SubTopic string
+	UserId   string
+}
